# smc

./: 2504.0541.py  filter.py  llama.py  pyproject.toml
src/smc/: __init__.py  filter.py  llama.py  smc.py
