[project]
name = "smc"
version = "0.1.0"
description = "Sequential Monte Carlo for constrained decoding"
readme = "README.md"
authors = [
    { name = "Hudson Cooper", email = "hncooper96@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "guidance",
    "llama-cpp-python>=0.3.9",
    "llguidance>=0.7.19",
    "numpy>=2.2.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
guidance = { git = "https://github.com/guidance-ai/guidance.git" }
