[project]
name = "smc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "guidance",
    "llama-cpp-python>=0.3.9",
    "llguidance>=0.7.19",
    "numpy>=2.2.5",
]

[tool.uv.sources]
guidance = { git = "https://github.com/guidance-ai/guidance.git" }
